VERSION 0.5.0

  * NEW FEATURE: Popup window when message arrived (optional)
  * NEW FEATURE: Configurable hotkeys
  * NEW FEATURE: Connection via HTTP possilble
  * NEW FEATURE: Jimm can show contact client info. 
                 Also Jimm is specified as JIMM client for other ones.
  * NEW FEATURE: Classic chat (text at top and edit area at bottom). For
                 siemens2 build only
  * NEW FEATURE: Safe login (MD5 login). Strongly recommended if
                 socks-proxy is used.
  * BUGFIX: Jimm sometimes crashed if was restored from flip on Motorola phones
  * BUGFIX: There are no more echo errors after errorous connections
  * BUGFIX: Jimm stoped login when received offline message from unknown contact
  * BUGFIX: Flag "no auth" was not stored in RMS
  * Added possibility to save stored history to file (at siemens only)
  * Rewrote Connection handler to be more modular and better readable
  * Now Jimm works with touchscreen (only for MIDP2 build)
  * New language system is done. Language strings are stored in *.lng files now
  * Status of contact is stored in contact list after checking for invisible
  * Now chat are filled with 5 last messages from history when opened (optional)
  * Text from user info can be copied
  * Removed creeping line as there were too much bugs on some mobile phones
  * Menu "Minimize" is shown only at sony-ericsson phones
  * Options are now compartible between versions
  * Pressing red button on Nokia phones will now end Jimm in a cleaner way
  * Internal data handling for ContactItems rewritten (should consume less heap)
  * Login time, online time and idle time can be seen on Information page
  * Code optimized for lower memory usage
  * External IP of contact are shown in client info
  * Status of temporary contacts and contacts awaiting authorization is shown
  * Improved dialogs for deleting chat and history
  * New util JLFT - "Jimm Lang File Tool" for easy comparing and changing Jimm .lang files